[gd_scene load_steps=5 format=3 uid="uid://2byht6mi5ho5"]

[ext_resource type="Texture2D" uid="uid://c6buttvxymgb0" path="res://icon.svg" id="1_qxytx"]
[ext_resource type="Script" path="res://Scene/Items/item.gd" id="2_up56i"]
[ext_resource type="Texture2D" uid="uid://k068syh3gu1t" path="res://Sprites/Items/circle_light.png" id="3_kh1fu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8sqhq"]
radius = 183.134

[node name="Item" type="Sprite2D"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_qxytx")
script = ExtResource("2_up56i")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_8sqhq")
debug_color = Color(0.572549, 0.529412, 0.462745, 0.419608)

[node name="CircleLight" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0.937255, 0.603922, 0, 0.207843)
show_behind_parent = true
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_kh1fu")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
